# egrul

./: .env.development  .env.example  .env.production  .gitignore  Cargo.toml  Makefile  README.md  config.toml  docker-compose.cluster.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json
docs/: ANALYTICS_DASHBOARD.md  API.md  ARCHITECTURE.md  CLICKHOUSE.md  CLUSTER_MIGRATION_SHARDING.md  DATA_LIFECYCLE.md  MANAGEMENT.md  SUBSCRIPTIONS.md  TESTING_PLAN.md
example/: VO_RIGFO_0000_9965_20251105_e57b205c-e98c-4e56-ac18-495cb0844c8c.xml  VO_RIGFO_0000_9965_20251130_34d2171d-b4f0-462c-8325-bdf4a65a6e80.xml  VO_RUGFO_0000_9965_20251105_9461e1d5-bbb8-4659-8e86-91fc9dfd2e64.xml  VO_RUGFO_0000_9965_20251116_c16d3011-7d08-44a1-b93c-9af6842a34d0.xml
frontend/: .eslintrc.json  .prettierignore  Dockerfile  README.md  SETUP.md  THEMES.md  codegen.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
parser/: Cargo.toml  config.example.toml
parser/benches/: parser_benchmark.rs
parser/src/: config.rs  deduplication.rs  error.rs  lib.rs  main.rs
parser/src/cli/: commands.rs  mod.rs
parser/src/models/: common.rs  egrip.rs  egrul.rs  mod.rs
parser/src/output/: mod.rs  parquet_writer.rs
parser/src/parallel/: mod.rs  worker.rs
parser/src/parser/: attributes.rs  egrip_parser.rs  egrul_parser.rs  mod.rs  xml_reader.rs
parser/tests/: integration_tests.rs
parser/tests/fixtures/: README.md
test3/: VO_RIGFO_0000_9965_20240802_0b5d8f51-3f21-40bf-b734-9e57efe34541.xml  VO_RUGFO_0000_9965_20251102_d17fdf23-7079-4b06-a02b-f74405c08baa.xml  (+2 more)
(+333 files in other folders)
