[package]
name = "egrul-parser"
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT"
description = "Высокопроизводительный XML парсер для ЕГРЮЛ/ЕГРИП реестров"

[lib]
name = "egrul_parser"
path = "src/lib.rs"

[[bin]]
name = "egrul-parser"
path = "src/main.rs"

[dependencies]
# XML парсинг
quick-xml = { version = "0.37", features = ["serialize"] }

# Кодировки (windows-1251)
encoding_rs = "0.8"

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Параллельная обработка
rayon = "1.10"
crossbeam-channel = "0.5"

# Parquet вывод
parquet = { version = "53.3", features = ["arrow"] }
arrow = { version = "53.3", features = ["chrono-tz"] }

# Асинхронность
tokio = { version = "1.42", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Обработка ошибок
thiserror = "2.0"
anyhow = "1.0"

# Утилиты
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
regex = "1.11"
lazy_static = "1.5"
memmap2 = "0.9"
walkdir = "2.5"
indicatif = "0.17"

# Конфигурация
config = "0.14"
toml = "0.8"
dirs = "5.0"
dotenvy = "0.15"

# Статистика / Parquet чтение
bytesize = "1.3"
humantime = "2.1"
num_cpus = "1.16"
console = "0.15"

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"

[[bench]]
name = "parser_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
